<resources>
    <string name="app_name">Arken</string>
    <string name="sign_up">Sign Up</string>
    <string name="buttonSignUp">Create Account</string>
    <string name="login">Login</string>
    <string name="go_on_as_a_guest">Go on as a Guest</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="use_google_account">Use Google Account</string>
    <string name="welcome_to">Welcome to</string>
    <string name="arken_stone">Arken Stone</string>
    <string name="title_activity_maps">Map</string>
    <string name="log_out_warning">You are about to log out! \n Do you want to go on with this action?</string>
    <string name="teq_upPrediction_warning">You are about to make up prediction! \n This action can not be undone! Only you can change it to down prediction \n Do you want to make up prediction on this trading equipment?</string>
    <string name="teq_downPrediction_warning">You are about to make down prediction! \n This action can not be undone! Only you can change it to up prediction \n Do you want to make down prediction on this trading equipment?</string>
    <string name="teq_unfollow_warning">Do you want to unfollow this trading equipment?</string>
    <string name="teq_follow_warning">Do you want to follow this trading equipment?</string>
    <string name="sign_up_now">Sign up Now!</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="comment_button">Make Comment</string>
    <string name="comment">Write your comment here:</string>
    <string name="economic_events">Economic Events</string>
    <string name="slider_desc_1">This is description 1</string>
    <string name="slider_desc_2">This is description 2</string>
    <string name="slider_desc_3">This is description 3</string>
    <string name="slider_desc_4">This is description 4</string>
    <string name="slider_desc_5">This is description 5</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="portfolios">Portfolios</string>
    <integer-array name="importance">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </integer-array>

    <string-array name="TeList">
        <item>EUR/USD</item>
        <item>TRY/EUR</item>
        <item>USD/EUR</item>
        <item>AUD/EUR</item>
        <item>CNY/EUR</item>
        <item>HKD/EUR</item>
        <item>INR/EUR</item>
        <item>JPY/EUR</item>
        <item>AED/EUR</item>
        <item>BTC/EUR</item>
        <item>ETH/EUR</item>
        <item>XRP/EUR</item>
        <item>LTC/EUR</item>
        <item>GOOG/EUR</item>
        <item>MSFT/EUR</item>
        <item>AAPL/EUR</item>
        <item>AMZN/EUR</item>
        <item>FB/EUR</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>