<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    android:background="@android:color/holo_blue_dark"
    android:id="@+id/login_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@id/login_signupButton_layout"
        app:layout_constraintStart_toStartOf="@id/login_line" />

    <LinearLayout
        android:id="@+id/login_signupButton_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/holo_blue_dark"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_signup" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_dark"
            android:paddingBottom="5dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_signupButton_layout"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:id="@+id/login_line"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_line"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:background="@android:color/white"
        android:animateLayoutChanges="true">

        <TextView
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:textSize="12sp"
            android:id="@+id/login_emailTag_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/login_email_editText"
            app:layout_constraintBottom_toBottomOf="@id/login_email_editText"
            android:gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/e_mail" />

        <EditText
            android:id="@+id/login_email_editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_edit_text"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/login_emailTag_textView"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:textSize="12sp"
            android:id="@+id/login_passwordTag_textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/login_password_editText"
            app:layout_constraintBottom_toBottomOf="@id/login_password_editText"
            android:gravity="center_vertical"
            android:layout_marginLeft="16dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/login_password_editText"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_edit_text"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:drawableEnd="@drawable/ic_eye"
            android:paddingRight="10dp"
            android:drawableRight="@drawable/ic_eye"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/login_passwordTag_textView"
            app:layout_constraintTop_toBottomOf="@id/login_email_editText"
            android:inputType="textPassword"/>
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_eye"
            app:layout_constraintEnd_toEndOf="@id/login_password_editText"
            app:layout_constraintTop_toBottomOf="@id/login_email_editText"
            android:layout_marginRight="10dp"
            android:id="@+id/login_password_eye_image"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password_editText"
            android:id="@+id/login_login_button">

        </Button>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_google_account"
            android:textSize="12sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColor="@android:color/holo_blue_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_login_button"
            android:id="@+id/loginGoogleButton">
          
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_on_as_a_guest"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:id="@+id/signup_guest_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@android:color/transparent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>